sources = files(
    'Application.cpp',
    'Application.hpp',
    'Buffer.cpp',
    'Buffer.hpp',
    'CommandBuffer.cpp',
    'CommandBuffer.hpp',
    'CommandPool.cpp',
    'CommandPool.hpp',
    'DescriptorPool.cpp',
    'DescriptorPool.hpp',
    'DescriptorSet.cpp',
    'DescriptorSet.hpp',
    'DescriptorSetLayout.cpp',
    'DescriptorSetLayout.hpp',
    'Device.cpp',
    'Device.hpp',
    'DeviceMemory.cpp',
    'DeviceMemory.hpp',
    'Fence.cpp',
    'Fence.hpp',
    'Framebuffer.cpp',
    'Framebuffer.hpp',
    'Image.cpp',
    'Image.hpp',
    'ImageView.cpp',
    'ImageView.hpp',
    'Initalization.cpp',
    'Initalization.hpp',
    'Instance.cpp',
    'Instance.hpp',
    'PhysicalDevice.cpp',
    'PhysicalDevice.hpp',
    'Pipeline.cpp',
    'Pipeline.hpp',
    'PipelineLayout.cpp',
    'PipelineLayout.hpp',
    'Queue.cpp',
    'Queue.hpp',
    'QueueFamilyIndices.cpp',
    'QueueFamilyIndices.hpp',
    'RenderPass.cpp',
    'RenderPass.hpp',
    'Sampler.cpp',
    'Sampler.hpp',
    'Semaphore.cpp',
    'Semaphore.hpp',
    'Shader.cpp',
    'Shader.hpp',
    'Surface.cpp',
    'Surface.hpp',
    'SwapChain.cpp',
    'SwapChain.hpp',
    'SwapChainSupport.cpp',
    'SwapChainSupport.hpp',
    'UniformBufferObject.hpp',
    'Vertex.hpp',
    'Window.cpp',
    'Window.hpp',
    'config.hpp',
    'main.cpp',
    'utils.hpp'
)

cpp_args = []

executable('vktest', sources, shaders,
    dependencies: dependencies,
    include_directories: incdirs,
    cpp_args: cpp_args,
    install: true)
